--- a/index.html
+++ b/index.html
@@ -46,18 +46,15 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .search{flex:1;display:flex;align-items:center;gap:8px}
 .search input{width:100%;padding:12px;border-radius:12px;border:1px solid rgba(15,23,42,0.06);outline:none}
 .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px}
-.card{border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
-.card:hover{transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
+.card{opacity: 0;animation: slideUpFade 0.5s forwards;border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
+.card:hover{opacity: 0;animation: slideUpFade 0.5s forwards;transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
 .thumb{width:100%;height:140px;border-radius:10px;background:linear-gradient(120deg,rgba(139,92,246,0.06),rgba(139,92,246,0.02));display:flex;align-items:center;justify-content:center;font-weight:800;color:var(--main);font-size:16px}
-.card h4{margin:10px 0 6px 0}
-.card p{margin:0;color:var(--muted);font-size:13px}
+.card h4{opacity: 0;animation: slideUpFade 0.5s forwards;margin:10px 0 6px 0}
+.card p{opacity: 0;animation: slideUpFade 0.5s forwards;margin:0;color:var(--muted);font-size:13px}
 .price{position:absolute;top:12px;left:12px;background:rgba(255,255,255,0.95);padding:6px 10px;border-radius:10px;font-weight:800;border:1px solid rgba(107,33,168,0.06)}
 .ribbon{position:absolute;right:-36px;top:12px;transform:rotate(45deg);background:linear-gradient(90deg,var(--accent),var(--main));color:#fff;padding:6px 46px;font-weight:800}
 /*.card-actions{display:flex;justify-content:space-between;align-items:center;margin-top:12px}*/
-@keyframes slideUpFade {
-  0% {opacity: 0;transform: translateY(20px);}
-  100% {opacity: 1;transform: translateY(0);}
-}
+
 .card-actions {
   display: flex;
   justify-content: space-between;
@@ -104,7 +101,10 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
   background-position: center;
   border-radius: 50%;
 }
-
+@keyframes slideUpFade {
+  0% {opacity: 0;transform: translateY(20px);}
+  100% {opacity: 1;transform: translateY(0);}
+}
 @media (max-width: 480px) {
   .cart-modal,
   .cart-modal .modal-content {
