--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .search{flex:1;display:flex;align-items:center;gap:8px}
 .search input{width:100%;padding:12px;border-radius:12px;border:1px solid rgba(15,23,42,0.06);outline:none}
 .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px}
-.card{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
-.card:hover{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
+.card{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 1.2s forwards;border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
+.card:hover{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 1.2s forwards;transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
 .thumb{width:100%;height:140px;border-radius:10px;background:linear-gradient(120deg,rgba(139,92,246,0.06),rgba(139,92,246,0.02));display:flex;align-items:center;justify-content:center;font-weight:800;color:var(--main);font-size:16px}
-.card h4{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;margin:10px 0 6px 0}
-.card p{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;margin:0;color:var(--muted);font-size:13px}
+.card h4{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 1.2s forwards;margin:10px 0 6px 0}
+.card p{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 1.2s forwards;margin:0;color:var(--muted);font-size:13px}
 .price{position:absolute;top:12px;left:12px;background:rgba(255,255,255,0.95);padding:6px 10px;border-radius:10px;font-weight:800;border:1px solid rgba(107,33,168,0.06)}
 .ribbon{position:absolute;right:-36px;top:12px;transform:rotate(45deg);background:linear-gradient(90deg,var(--accent),var(--main));color:#fff;padding:6px 46px;font-weight:800}
 /*.card-actions{display:flex;justify-content:space-between;align-items:center;margin-top:12px}*/
@@ -60,9 +60,12 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
+
   opacity: 0;
-  animation: slideUpFade 0.5s forwards;
+  animation: slideUpFade 1.2s ease-in-out forwards;
+  transform-origin: bottom;
 }
+
 
 .btn-ghost{padding:8px 10px;border-radius:10px;/*border:1px dashed rgba(107,33,168,0.18);*/background:transparent}
 .modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;padding:18px;visibility:hidden;opacity:0;transition:all .22s;z-index:60}
@@ -105,9 +108,31 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
   100% {opacity: 1;transform: translateY(0);}
 }*/
 @keyframes slideUpFade {
-  0% {opacity: 0; transform: translateY(20px);}
-  60% {opacity: 1; transform: translateY(-5px);}
-  100% {opacity: 1; transform: translateY(0);}
+  0% {
+    opacity: 0;
+    transform: translateY(40px) scale(0.95) rotateX(8deg);
+    filter: blur(4px);
+  }
+  25% {
+    opacity: 0.5;
+    transform: translateY(25px) scale(0.97) rotateX(4deg);
+    filter: blur(2px);
+  }
+  50% {
+    opacity: 0.8;
+    transform: translateY(10px) scale(1.02) rotateX(0deg);
+    filter: blur(1px);
+  }
+  70% {
+    opacity: 1;
+    transform: translateY(-4px) scale(1);
+    filter: blur(0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+    filter: blur(0);
+  }
 }
 
 @media (max-width: 480px) {
@@ -515,7 +540,7 @@ document.getElementById('checkoutForm').addEventListener('submit', e=>{
 })
 document.addEventListener('keydown', (e)=>{ if(e.key==='Escape'){ checkoutModal.classList.remove('open'); noteModal.classList.remove('open') } })
 document.querySelectorAll('.card-actions').forEach((el, i) => {
-  el.style.setProperty('--delay', `${i * 0.2}s`);
+  el.style.setProperty('--delay', `${i * 0.25}s`);
 });
 </script>
 </body>
