--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .container{display:contents}
 .sidebar{background:linear-gradient(180deg,rgba(255,255,255,0.94),rgba(255,255,255,0.9));border-radius:var(--card-radius);padding:18px;backdrop-filter: blur(var(--glass-blur));border:1px solid var(--glass-border);box-shadow:var(--shadow)}
 .brand-compact{display:flex;align-items:center;gap:12px;margin-bottom:10px}
-.categories{display:flex;flex-direction:column;gap:8px;margin-top:10px}
+.categories{opacity: 0;animation:slideInRight 1.1s ease-in-out forwards;display:flex;flex-direction:column;gap:8px;margin-top:10px}
 .cat{padding:12px;border-radius:10px;display:flex;justify-content:space-between;align-items:center;cursor:pointer;border:1px solid transparent;transition:all .18s}
 .cat:hover{transform:translateX(-6px)}
 .cat.active{background:linear-gradient(90deg,rgba(139,92,246,0.12),rgba(139,92,246,0.06));border-color:rgba(139,92,246,0.18)}
@@ -134,6 +134,29 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
     filter: blur(0);
   }
 }
+@keyframes slideInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(60px) scale(0.95);
+    filter: blur(4px);
+  }
+  40% {
+    opacity: 0.6;
+    transform: translateX(30px) scale(0.98);
+    filter: blur(2px);
+  }
+  70% {
+    opacity: 1;
+    transform: translateX(-5px) scale(1.02);
+    filter: blur(1px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+    filter: blur(0);
+  }
+}
+
 
 @media (max-width: 480px) {
   .cart-modal,
