--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .container{display:contents}
 .sidebar{background:linear-gradient(180deg,rgba(255,255,255,0.94),rgba(255,255,255,0.9));border-radius:var(--card-radius);padding:18px;backdrop-filter: blur(var(--glass-blur));border:1px solid var(--glass-border);box-shadow:var(--shadow)}
 .brand-compact{display:flex;align-items:center;gap:12px;margin-bottom:10px}
-.categories{opacity: 0;animation:slideInRight 1.1s ease-in-out forwards;display:flex;flex-direction:column;gap:8px;margin-top:10px}
+.categories {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.categories div {
+  opacity: 0;
+  transform: translateX(40px);
+  white-space: nowrap;
+  animation: slideTyping 0.9s cubic-bezier(0.55, 0.08, 0.68, 0.53) forwards;
+}
+
+.categories div:nth-child(1) { animation-delay: 0s; }
+.categories div:nth-child(2) { animation-delay: 0.45s; }
+.categories div:nth-child(3) { animation-delay: 0.93s; }
+.categories div:nth-child(4) { animation-delay: 1.35s; }
+.categories div:nth-child(5) { animation-delay: 1.85s; }
+
+
 .cat{padding:12px;border-radius:10px;display:flex;justify-content:space-between;align-items:center;cursor:pointer;border:1px solid transparent;transition:all .18s}
 .cat:hover{transform:translateX(-6px)}
 .cat.active{background:linear-gradient(90deg,rgba(139,92,246,0.12),rgba(139,92,246,0.06));border-color:rgba(139,92,246,0.18)}
@@ -60,7 +81,6 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
-
   opacity: 0;
   animation: slideUpFade 0.5s forwards;
   transform-origin: bottom;
@@ -131,6 +151,26 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
   100% {
     opacity: 1;
     transform: translateY(0) scale(1);
+    filter: blur(0);
+  }
+}
+@keyframes slideTyping {
+  0% {
+    opacity: 0;
+    transform: translateX(40px);
+    letter-spacing: 3px;
+    filter: blur(3px);
+  }
+  50% {
+    opacity: 0.8;
+    transform: translateX(10px);
+    letter-spacing: 1px;
+    filter: blur(1px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    letter-spacing: 0;
     filter: blur(0);
   }
 }
@@ -564,6 +604,12 @@ document.getElementById('checkoutForm').addEventListener('submit', e=>{
 document.addEventListener('keydown', (e)=>{ if(e.key==='Escape'){ checkoutModal.classList.remove('open'); noteModal.classList.remove('open') } })
 document.querySelectorAll('.card-actions').forEach((el, i) => {
   el.style.setProperty('--delay', `${i * 0.2}s`);
+});
+document.addEventListener("DOMContentLoaded", () => {
+  const cats = document.querySelectorAll('.categories .cat span:first-child');
+  cats.forEach((el, i) => {
+    el.style.animationDelay = `${i * 1.3}s`;
+  });
 });
 </script>
 </body>
