--- a/index.html
+++ b/index.html
@@ -39,23 +39,65 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 }
 
 .categories div {
+  position: relative;
   opacity: 0;
   transform: translateX(40px);
-  white-space: nowrap;
-  animation: slideTyping 0.9s cubic-bezier(0.55, 0.08, 0.68, 0.53) forwards;
+  animation: slideTyping 1.2s ease forwards;
+  color: #fff;
+  font-weight: 600;
+  overflow: hidden;
+}
+
+.categories div::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(270deg, rgba(255,255,255,0.9) 0%, transparent 100%);
+  transform: translateX(100%);
+  animation: typingShine 1.2s ease forwards;
+  animation-delay: inherit;
 }
 
 .categories div:nth-child(1) { animation-delay: 0s; }
-.categories div:nth-child(2) { animation-delay: 0.2s; }
-.categories div:nth-child(3) { animation-delay: 0.4s; }
-.categories div:nth-child(4) { animation-delay: 0.6s; }
-.categories div:nth-child(5) { animation-delay: 0.8s; }
-.categories div:nth-child(6) { animation-delay: 1s; }
-.categories div:nth-child(7) { animation-delay: 1.2s; }
-.categories div:nth-child(8) { animation-delay: 1.4s; }
-.categories div:nth-child(9) { animation-delay: 1.6s; }
-.categories div:nth-child(10){ animation-delay: 1.8s; }
+.categories div:nth-child(2) { animation-delay: 0.3s; }
+.categories div:nth-child(3) { animation-delay: 0.6s; }
+.categories div:nth-child(4) { animation-delay: 0.9s; }
+.categories div:nth-child(5) { animation-delay: 1.2s; }
+.categories div:nth-child(6) { animation-delay: 1.5s; }
+.categories div:nth-child(7) { animation-delay: 1.8s; }
+.categories div:nth-child(8) { animation-delay: 2.1s; }
+.categories div:nth-child(9) { animation-delay: 2.4s; }
+.categories div:nth-child(10){ animation-delay: 2.7s; }
 
+@keyframes slideTyping {
+  0% {
+    opacity: 0;
+    transform: translateX(40px);
+    letter-spacing: 2px;
+    filter: blur(2px);
+  }
+  40% {
+    opacity: 1;
+    transform: translateX(10px);
+    letter-spacing: 1px;
+    filter: blur(1px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    letter-spacing: 0;
+    filter: blur(0);
+  }
+}
+
+@keyframes typingShine {
+  0% { transform: translateX(100%); opacity: 1; }
+  70% { opacity: 1; }
+  100% { transform: translateX(-100%); opacity: 0; }
+}
 
 .cat{padding:12px;border-radius:10px;display:flex;justify-content:space-between;align-items:center;cursor:pointer;border:1px solid transparent;transition:all .18s}
 .cat:hover{transform:translateX(-6px)}
@@ -156,26 +198,6 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
   100% {
     opacity: 1;
     transform: translateY(0) scale(1);
-    filter: blur(0);
-  }
-}
-@keyframes slideTyping {
-  0% {
-    opacity: 0;
-    transform: translateX(40px);
-    letter-spacing: 3px;
-    filter: blur(3px);
-  }
-  50% {
-    opacity: 0.8;
-    transform: translateX(10px);
-    letter-spacing: 1px;
-    filter: blur(1px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-    letter-spacing: 0;
     filter: blur(0);
   }
 }
