--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 *{box-sizing:border-box}
 html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-gradient(180deg,var(--bg),#fbf8ff);color:var(--text);-webkit-font-smoothing:antialiased}
 .app{max-width:1200px;margin:28px auto;padding:18px;display:grid;grid-template-columns:360px 1fr;gap:22px;align-items:start}
-.header{display:flex;align-items:center;justify-content:space-between;padding:12px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.9),rgba(255,255,255,0.85));border:1px solid rgba(0,0,0,0.04);box-shadow:var(--shadow)}
+.header{display:flex;align-items:center;justify-content:space-between;padding:12px;border-radius:12px;
+        background:linear-gradient(149deg, rgba(255, 255, 255, 0.94), rgb(69 1 1 / 90%));
+        border:1px solid rgba(0,0,0,0.04);box-shadow:var(--shadow)}
 .brand{display:flex;align-items:center;gap:12px}
 .logo{width:87px;height:62px;border-radius:16px;background:linear-gradient(135deg,var(--accent),var(--main));display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:22px}
 .brand h1{margin:0;font-size:18px}
