--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-gradient(180deg,var(--bg),#fbf8ff);color:var(--text);-webkit-font-smoothing:antialiased}
 .app{max-width:1200px;margin:28px auto;padding:18px;display:grid;grid-template-columns:360px 1fr;gap:22px;align-items:start}
 .header{display:flex;align-items:center;justify-content:space-between;padding:12px;border-radius:12px;
-        background:linear-gradient(149deg, rgba(255, 255, 255, 0.94), rgb(69 1 1 / 90%));
+        background:linear-gradient(149deg, rgba(22 15 15 / 94%), rgb(69 1 1 / 90%));
         border:1px solid rgba(0,0,0,0.04);box-shadow:var(--shadow)}
 .brand{display:flex;align-items:center;gap:12px}
 .logo{width:87px;height:62px;border-radius:16px;background:linear-gradient(135deg,var(--accent),var(--main));display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:22px}
@@ -31,7 +31,7 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .menu-btn{display:none;padding:8px 12px;border-radius:10px;border:none;background:linear-gradient(90deg,var(--accent),var(--main));color:#fff;font-weight:700}
 .container{display:contents}
 .sidebar {
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgb(145 0 0 / 90%));
+    background: linear-gradient(180deg, rgba(22 15 15 / 94%), rgb(145 0 0 / 90%));
     border-radius: var(--card-radius);
     padding: 18px;
     backdrop-filter: blur(var(--glass-blur));
@@ -122,7 +122,7 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
     min-height: 78vh;
     padding: 20px;
     border-radius: var(--card-radius);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgb(69 1 1 / 90%));
+    background: linear-gradient(180deg, rgba(22 15 15 / 94%), rgb(69 1 1 / 90%));
     border: 1px solid var(--glass-border);
     backdrop-filter: blur(var(--glass-blur));
     box-shadow: var(--shadow);
