--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
 .footer-actions{display:flex;gap:8px;justify-content:flex-end;margin-top:12px}
 .bg-glow{position:fixed;left:50%;top:8%;width:520px;height:280px;border-radius:48%;transform:translateX(-50%);filter:blur(48px);opacity:0.12;background:radial-gradient(circle at 30% 30%,var(--accent),transparent 20%),radial-gradient(circle at 70% 70%,var(--main),transparent 30%);pointer-events:none;z-index:0}
 .sidebar-slide{position:fixed;inset:0;display:none;z-index:80}
-.sidebar-panel{position:fixed;right:0;top:0;height:100%;width:320px;background:linear-gradient(180deg,rgba(255,255,255,0.96),rgba(255,255,255,0.92));box-shadow: -20px 0 40px rgba(16,24,40,0.12);padding:18px;transform:translateX(100%);transition:transform .28s}
+.sidebar-panel{position:fixed;right:0;top:0;height:100%;width:320px;
+               background:linear-gradient(180deg, rgba(22 15 15 / 94%), rgb(145 0 0 / 90%));
+               box-shadow: -20px 0 40px rgba(16,24,40,0.12);padding:18px;transform:translateX(100%);transition:transform .28s}
 .sidebar-panel.open{transform:translateX(0)}
 .close-side{display:flex;justify-content:flex-end}
 .cart-item-controls{display:flex;gap:6px;align-items:center}
