--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --accent: #9d0000;
     --bg: #3b0b0b;
     --text: #fff
-    --muted: #9d0000;
+    --muted: #fff/*#9d0000*/;
     --glass-bg: rgb(26 26 26 / 45%);
     --card-radius: 14px;
     --shadow: 0 14px 40px rgba(16, 24, 40, 0.06);
