--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
       </div>
     </div>
     <div style="display:flex;gap:8px;align-items:center;justify-content:space-between">
-      <div style="font-weight:700">الأقسام</div>
+      <div style="font-weight:700;color:var(--text)">الأقسام</div>
       <div>
         <button id="cartBtnSide" class="cart-toggle">🛒 <span id="cartCountSide" class="cart-badge">0</span></button>
       </div>
