--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     --bg: #3b0b0b;
     --text: #fff
     --muted: #fff/*#9d0000*/;
-    --glass-bg: rgb(26 26 26 / 45%);
+    --glass-bg:  #fff/*rgb(26 26 26 / 45%)*/;
     --card-radius: 14px;
-    --shadow: 0 14px 40px rgba(16, 24, 40, 0.06);
-    --glass-border: rgb(157 91 91 / 45%);
+    --shadow: 0 14px 40px  #fff/*rgba(16, 24, 40, 0.06)*/;
+    --glass-border: #fff/*rgb(157 91 91 / 45%)*/;
     --glass-blur: 10px;
 }
 *{box-sizing:border-box}
