--- a/iq/3/index.html
+++ b/iq/3/index.html
@@ -46,14 +46,30 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .search{flex:1;display:flex;align-items:center;gap:8px}
 .search input{width:100%;padding:12px;border-radius:12px;border:1px solid rgba(15,23,42,0.06);outline:none}
 .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px}
-.card{border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
-.card:hover{transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
-.thumb{width:100%;height:140px;border-radius:10px;background:linear-gradient(120deg,rgba(139,92,246,0.06),rgba(139,92,246,0.02));display:flex;align-items:center;justify-content:center;font-weight:800;color:var(--main);font-size:16px}
-.card h4{margin:10px 0 6px 0}
-.card p{margin:0;color:var(--muted);font-size:13px}
+.card{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(144 46 46 / 32%),rgba(22 15 15 / 94%));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
+.card:hover{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
+.thumb{
+    width:100%;height:140px;border-radius:10px;
+    background:linear-gradient(120deg,rgba(139,92,246,0.06),rgba(139,92,246,0.02));
+    display:flex;align-items:center;
+    justify-content:center;
+    font-weight:800;color:var(#f7f4f4);
+    font-size:16px}
+.card h4{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;margin:10px 0 6px 0}
+.card p{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;margin:0;color:var(--muted);font-size:13px}
 .price{position:absolute;top:12px;left:12px;background:rgba(255,255,255,0.95);padding:6px 10px;border-radius:10px;font-weight:800;border:1px solid rgba(107,33,168,0.06)}
 .ribbon{position:absolute;right:-36px;top:12px;transform:rotate(45deg);background:linear-gradient(90deg,var(--accent),var(--main));color:#fff;padding:6px 46px;font-weight:800}
-.card-actions{display:flex;justify-content:space-between;align-items:center;margin-top:12px}
+/*.card-actions{display:flex;justify-content:space-between;align-items:center;margin-top:12px}*/
+.card-actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+  opacity: 0;
+  animation: slideUpFade 0.5s forwards;
+  transform-origin: bottom;
+}
+
 .btn-ghost{padding:8px 10px;border-radius:10px;/*border:1px dashed rgba(107,33,168,0.18);*/background:transparent}
 .modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;padding:18px;visibility:hidden;opacity:0;transition:all .22s;z-index:60}
 .modal.open{visibility:visible;opacity:1}
@@ -507,6 +523,9 @@ document.getElementById('checkoutForm').addEventListener('submit', e=>{
   checkoutModal.setAttribute('aria-hidden','true')
 })
 document.addEventListener('keydown', (e)=>{ if(e.key==='Escape'){ checkoutModal.classList.remove('open'); noteModal.classList.remove('open') } })
+document.querySelectorAll('.card-actions').forEach((el, i) => {
+  el.style.setProperty('--delay', `${i * 0.2}s`);
+});
 const items = document.querySelectorAll('.menu-item');
 items.forEach((item, index) => {
   setTimeout(() => {
