--- a/iq/3/index.html
+++ b/iq/3/index.html
@@ -46,7 +46,7 @@ html,body{height:100%;margin:0;font-family:"Cairo",sans-serif;background:linear-
 .search{flex:1;display:flex;align-items:center;gap:8px}
 .search input{width:100%;padding:12px;border-radius:12px;border:1px solid rgba(15,23,42,0.06);outline:none}
 .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:18px}
-.card{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;border-radius:12px;padding:14px;background:linear-gradient(180deg,rgba(144 46 46 / 32%),rgba(22 15 15 / 94%));border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
+.card{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;border-radius:12px;padding:14px;border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(16,24,40,0.04);position:relative;overflow:hidden;cursor:pointer;transition:transform .22s,box-shadow .22s}
 .card:hover{animation-delay: var(--delay, 0s);opacity: 0;animation: slideUpFade 0.5s forwards;transform:translateY(-8px);box-shadow:0 26px 46px rgba(107,33,168,0.08)}
 .thumb{
     width:100%;height:140px;border-radius:10px;
