--- a/mot/index.html
+++ b/mot/index.html
@@ -316,29 +316,29 @@ const DATA = {
     'ساعات'
   ],
   products: [
-    { id: 1, name: 'عرض هاتف + كفر + سماعة', cat: 'العروض', desc: 'حزمة توفير شاملة بسعر مميز', price: 980000, tag: 'عرض محدود' },
-    { id: 2, name: 'عرض شاحن + كابل سريع', cat: 'العروض', desc: 'شحن سريع مع كابل USB-C', price: 35000, tag: 'عرض' },
-    { id: 3, name: 'عرض سماعة + كفر', cat: 'العروض', desc: 'سماعة عالية الجودة مع كفر حماية', price: 50000, tag: 'مميز' },
+    { id: 1, name: 'test 1 - 1', cat: 'العروض', desc: 'test desc 1', price: 980000, tag: 'عرض محدود' },
+    { id: 2, name: 'test 2 - 1', cat: 'العروض', desc: 'test desc 2', price: 35000, tag: 'عرض' },
+    { id: 3, name: 'test 3 - 1', cat: 'العروض', desc: 'test desc 3', price: 50000, tag: 'مميز' },
 
-    { id: 4, name: 'iPhone 16 pro max', cat: 'الهواتف', desc: 'شاشة Super Retina XDR، كاميرا ثلاثية، أداء عالي', price: 1350000, tag: 'الأكثر طلباً' },
-    { id: 5, name: 'Samsung Galaxy S24 Ultra', cat: 'الهواتف', desc: 'كاميرا 200 ميجابيكسل، دعم قلم S-Pen', price: 1250000, tag: 'جديد' },
-    { id: 6, name: 'Redmi Note 13 Pro', cat: 'الهواتف', desc: 'أداء ممتاز وسعر اقتصادي', price: 480000, tag: 'اقتصادي' },
+    { id: 4, name: 'test 1 - 2', cat: 'الهواتف', desc: 'test desc 1', price: 1350000, tag: 'الأكثر طلباً' },
+    { id: 5, name: 'test 2 - 2', cat: 'الهواتف', desc: 'test desc 2', price: 1250000, tag: 'جديد' },
+    { id: 6, name: 'test 3 - 2', cat: 'الهواتف', desc: 'test desc 3', price: 480000, tag: 'اقتصادي' },
 
-    { id: 7, name: 'حامل جوال مغناطيسي', cat: 'اكسسوارات الهاتف', desc: 'دوران 360°، تثبيت قوي، تصميم أنيق', price: 18000, tag: 'عملي' },
-    { id: 8, name: 'منظف شاشة ذكي', cat: 'اكسسوارات الهاتف', desc: 'بخاخ تنظيف مدمج مع قطعة قماش', price: 7000, tag: 'مفيد' },
-    { id: 9, name: 'سماعة بلوتوث صغيرة', cat: 'اكسسوارات الهاتف', desc: 'صوت نقي وراحة أثناء الاستخدام', price: 45000, tag: 'مميز' },
+    { id: 7, name: 'test 1 - 3', cat: 'اكسسوارات الهاتف', desc: 'test desc 1', price: 18000, tag: 'عملي' },
+    { id: 8, name: 'test 2 - 3', cat: 'اكسسوارات الهاتف', desc: 'test desc 2', price: 7000, tag: 'مفيد' },
+    { id: 9, name: 'test 3 - 3', cat: 'اكسسوارات الهاتف', desc: 'test desc 3', price: 45000, tag: 'مميز' },
 
-    { id: 10, name: 'كفر حماية شفاف iPhone 16 pro max', cat: 'كفرات وحمايه', desc: 'مضاد للصدمات، خامة TPU شفافة', price: 15000, tag: 'الأكثر مبيعاً' },
-    { id: 11, name: 'كفر سيليكون Galaxy S24', cat: 'كفرات وحمايه', desc: 'ملمس ناعم، حماية كاملة للجهاز', price: 12000, tag: 'جديد' },
-    { id: 12, name: 'زجاج حماية 9H', cat: 'كفرات وحمايه', desc: 'مضاد للخدوش، شفاف بالكامل', price: 8000, tag: 'أساسي' },
+    { id: 10, name: 'test 1 - 4', cat: 'كفرات وحمايه', desc: 'test desc 1', price: 15000, tag: 'الأكثر مبيعاً' },
+    { id: 11, name: 'test 2 - 4', cat: 'كفرات وحمايه', desc: 'test desc 2', price: 12000, tag: 'جديد' },
+    { id: 12, name: 'test 3 - 4', cat: 'كفرات وحمايه', desc: 'test desc 3', price: 8000, tag: 'أساسي' },
 
-    { id: 13, name: 'شاحن سريع 25 واط سامسونج', cat: 'شواحن', desc: 'يدعم الشحن السريع PD، كيبل Type-C', price: 25000, tag: 'سريع' },
-    { id: 14, name: 'كيبل شحن Type-C أصلي', cat: 'شواحن', desc: 'طول 1 متر، جودة عالية، متين', price: 9000, tag: 'مضمون' },
-    { id: 15, name: 'باور بانك 20000mAh من Anker', cat: 'شواحن', desc: 'شحن سريع PD، مدخلين USB-C', price: 39000, tag: 'مضمون' },
+    { id: 13, name: 'test 1 - 5', cat: 'شواحن', desc: 'test desc 1', price: 25000, tag: 'سريع' },
+    { id: 14, name: 'test 2 - 5', cat: 'شواحن', desc: 'test desc 2', price: 9000, tag: 'مضمون' },
+    { id: 15, name: 'test 3 - 5', cat: 'شواحن', desc: 'test desc 3', price: 39000, tag: 'مضمون' },
 
-    { id: 16, name: 'Apple Watch Series 11', cat: 'ساعات', desc: 'شاشة Always-On Retina، تتبع صحي متكامل', price: 490000, tag: 'راقي' },
-    { id: 17, name: 'Galaxy Watch 6 Classic', cat: 'ساعات', desc: 'تصميم معدني أنيق، بطارية تدوم طويلاً', price: 420000, tag: 'فاخر' },
-    { id: 18, name: 'ساعة ذكية Amazfit GTS 4', cat: 'ساعات', desc: 'متابعة النوم والرياضة، مقاومة للماء', price: 130000, tag: 'مميز' }
+    { id: 16, name: 'test 1 - 6', cat: 'ساعات', desc: 'test desc 1', price: 490000, tag: 'راقي' },
+    { id: 17, name: 'test 2 - 6', cat: 'ساعات', desc: 'test desc 2', price: 420000, tag: 'فاخر' },
+    { id: 18, name: 'test 3 - 6', cat: 'ساعات', desc: 'test desc 3', price: 130000, tag: 'مميز' }
   ]
 }
 
